packages/react-components/src/components/TagInput/TagInput.module.scss
.tag-input {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  transition: border 0.25s ease-in-out;
  border: 1px solid var(--border-basic-primary);
  border-radius: 4px;
  background: var(--surface-primary-default);
  background-clip: padding-box;
  padding: 6px;
  width: 100%;
  overflow-y: auto;
  color: var(--content-basic-primary);
  font-size: 15px;
  will-change: border-color;

  &::placeholder {
    color: var(--content-basic-disabled);
  }

  &:hover {
    outline: 0;
    border-color: var(--border-basic-hover);
  }

  &:focus-within {
    outline: 0;
    border-color: var(--action-primary-default);
  }

  &:disabled {
    border: 1px solid var(--border-basic-disabled);
    background-color: var(--surface-primary-disabled);
    cursor: not-allowed;
    color: var(--content-basic-disabled);
  }

  &--error,
  &--error:focus-within {
    border-color: var(--action-negative-default);
  }

  * {
    box-sizing: border-box;
  }

  > * {
    margin: 2px;
  }

  @at-root #{&}__input {
    appearance: none;
    flex-grow: 1;
    margin: 0 4px;
    outline: 0;
    border-style: none;
    box-shadow: none;
    background: transparent;
    padding: 0 0 0 4px;
    width: auto;
    color: var(--content-basic-primary);
    font-size: 15px;

    &:focus {
      border-style: none;
    }

    &--medium {
      line-height: 28px;
    }

    &--large {
      line-height: 36px;
    }
  }

  @at-root #{&}__tag__content {
    outline: 0;
    border-style: none;
    padding: 0;
    white-space: nowrap;
  }
}

